[package]
name = "lucid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    ".",
    "crates/clearglyph",
    "crates/core",
    "crates/editor",
    "crates/layout",
    "crates/native",
    "crates/web",
]